<resources>
    <string name="app_name">Notes</string>
    <string name="tasks">Tasks</string>
    <string name="all">All</string>
    <string name="title">Title</string>
    <string name="save_changes">Save changes?</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>

    <string name="support_us">Support US</string>
    <string name="about_us">About US</string>
    <string name="share">Share App</string>
    <string name="delete_really">You want delete really it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_category">Add category</string>
    <string name="name">Name</string>
    <string name="choose_color">Choose color…</string>
    <string name="search">Search</string>
    <string name="search_for_note">Search for note</string>
    <string name="search_for_task">Search for task</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="restore_really">Are you sure you want to empty the cart?</string>
    <string name="tag">#Tag</string>

    <string name="app_version">Version:1.1</string>
    <string name="developer">Developer from Isoqov Jamshid</string>
</resources>