<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/bg_dialog"
    android:padding="24dp">


    <TextView
        android:id="@+id/tv_message"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_category"
        android:textColor="#CFCFCF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_category_name"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginVertical="24dp"
        android:backgroundTint="@color/primary"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_message" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_discard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_discard_btn"
        android:text="@string/discard"
        app:layout_constraintEnd_toStartOf="@id/btn_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_category_name"
        app:layout_constraintWidth_percent="0.38" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_save_btn"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_discard"
        app:layout_constraintTop_toBottomOf="@id/input_category_name"
        app:layout_constraintWidth_percent="0.38" />

</androidx.constraintlayout.widget.ConstraintLayout>